get back project & add admin seeder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "13306:3306"
     environment:
-      - MYSQL_DATABASE=dockerphp
+      - MYSQL_DATABASE=laranews
       - MYSQL_ROOT_PASSWORD=password
     volumes:
       - "db:/var/lib/mysql:rw"
